# devpilot

./: .envrc  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  bump-version.sh  chapter_1.html  chapter_2.html  cliff.toml  completions.html  data.html  devbox.json  devpilot.nimble  flake.nix  index.html  machines.html  print.html  projects.html  run.sh  searchindex.js  searchindex.json  templates.html  toc.html  toc.js  tui.html  workspaces.html
.github/workflows/: book.yml  release.yml  tests.yml
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  completions.md  data.md  machines.md  projects.md  templates.md  tui.md  workspaces.md
src/: devpilot.nim  devpilot_embedded_templates.nim  devpilot_storage.nim  devpilot_tui.nim  dp.nim  main.rs
src/arguments/: machine.rs  project.rs  template.rs  workspace.rs
src/commands/: mod.rs
src/commands/machine/: add.rs  connect.rs  list.rs  mod.rs  pick.rs  remove.rs
src/commands/project/: add.rs  info.rs  list.rs  mod.rs
src/commands/template/: add.rs  apply.rs  info.rs  list.rs  mod.rs
src/commands/workspace/: add.rs  component.rs  info.rs  list.rs  mod.rs
templates/: README.md
templates/common/: .envrc  .gitignore  README.md  flake.nix
templates/cpp/: CMakeLists.txt  Makefile
templates/cpp/.github/workflows/: release.yml  tests.yml
templates/cpp/include/{{snake_name}}/: {{snake_name}}.hpp
templates/cpp/src/{{snake_name}}/: {{snake_name}}.cpp
templates/cpp/test/: basic_test.cpp
templates/go/: Makefile
templates/go-cli/: .envrc  .gitignore  README.md  flake.nix  go.mod
templates/go-cli/.github/workflows/: tests.yml
templates/go-cli/src/cmd/: root_test.go
templates/go/.github/workflows/: release.yml
templates/go/src/: main.go
templates/go/src/cmd/: root.go
templates/nim/: {{snake_name}}.nimble
templates/nim-cli/: .envrc  .gitignore  Makefile  README.md  flake.nix
templates/nim-cli/src/: {{snake_name}}.nim
templates/nim/tests/: test_cli.nim
templates/rust/: Cargo.toml  Makefile
templates/rust/examples/: main.rs
templates/rust/src/: lib.rs
templates/zig/: Makefile  build.zig
templates/zig-cli/: .envrc  .gitignore  PROJECT  README.md  flake.nix
templates/zig/src/: main.zig
tests/: test_backup  test_backup.nim  test_cli  test_cli.nim  test_discovery  test_discovery.nim  test_exports  test_exports.nim  test_machines  test_machines.nim  test_projects  test_projects.nim  test_support.nim  test_templates  test_templates.nim  test_tui_command_runner  test_tui_command_runner.nim  test_tui_forms.nim  test_workspaces.nim
(+6 files in other folders)
