[package]
name = "devpilot"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
version = "0.1.6"
edition = "2021"
license = "MIT"

[[bin]]
name = "dp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
colored = "2.0.4"
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
crossterm = "0.27.0"
directories = "5.0.1"
dotenv = "0.15.0"
inquire = "0.7.5"
interfaces = "0.0.9"
ratatui = "0.26.3"
hostname = "0.4.0"
regex = "1.10.5"
tabled = { version = "0.15.0"}
russh = "0.49.2"
skim = "0.16.0"
